// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`phonemes renders 0 1`] = `
Array [
  .c0 {
  phonemes: 0;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: 0;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: 0;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`phonemes renders function 1`] = `
Array [
  .c0 {
  phonemes: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: has;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: has;
}

<div
    className="c0"
  />,
]
`;

exports[`phonemes renders invalid theme path 1`] = `
Array [
  .c0 {
  phonemes: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`phonemes renders negative number 1`] = `
Array [
  .c0 {
  phonemes: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`phonemes renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    phonemes: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    phonemes: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    phonemes: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    phonemes: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    phonemes: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    phonemes: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    phonemes: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    phonemes: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    phonemes: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    phonemes: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    phonemes: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    phonemes: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    phonemes: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    phonemes: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    phonemes: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    phonemes: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`phonemes renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    phonemes: July;
  }
}

@media April {
  .c0 {
    phonemes: August;
  }
}

@media January {
  .c0 {
    phonemes: September;
  }
}

@media April {
  .c0 {
    phonemes: November;
  }
}

@media June {
  .c0 {
    phonemes: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    phonemes: July;
  }
}

@media April {
  .c0 {
    phonemes: August;
  }
}

@media January {
  .c0 {
    phonemes: September;
  }
}

@media April {
  .c0 {
    phonemes: November;
  }
}

@media June {
  .c0 {
    phonemes: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    phonemes: January;
  }
}

@media April {
  .c0 {
    phonemes: December;
  }
}

@media January {
  .c0 {
    phonemes: April;
  }
}

@media April {
  .c0 {
    phonemes: May;
  }
}

@media June {
  .c0 {
    phonemes: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    phonemes: January;
  }
}

@media April {
  .c0 {
    phonemes: December;
  }
}

@media January {
  .c0 {
    phonemes: April;
  }
}

@media April {
  .c0 {
    phonemes: May;
  }
}

@media June {
  .c0 {
    phonemes: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`phonemes renders postitive number 1`] = `
Array [
  .c0 {
  phonemes: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`phonemes renders string 1`] = `
Array [
  .c0 {
  phonemes: July;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: July;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: June;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: June;
}

<div
    className="c0"
  />,
]
`;

exports[`phonemes renders valid theme path 1`] = `
Array [
  .c0 {
  phonemes: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  phonemes: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
